--- a/package.json
+++ b/package.json
@@ -2,30 +2,6 @@
   "name": "nextjs-with-typescript",
   "version": "5.0.0",
   "private": true,
-<<<<<<< HEAD
-=======
-  "dependencies": {
-    "@brainhubeu/react-carousel": "^2.0.4",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.6.1",
-    "@mui/material": "^5.6.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^13.5.0",
-    "@trendyol-js/react-carousel": "^2.0.1",
-    "carousel-react-rcdev": "0.0.3",
-    "node-sass": "^7.0.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-fa": "^5.0.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.0",
-    "reactstrap": "^9.0.1",
-    "web-vitals": "^2.1.4"
-  },
->>>>>>> parent of 454905d (no message)
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -33,17 +9,22 @@
     "lint": "next lint",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   },
-<<<<<<< HEAD
   "dependencies": {
     "@emotion/cache": "latest",
-    "@emotion/react": "latest",
+    "@emotion/react": "^11.9.0",
     "@emotion/server": "latest",
-    "@emotion/styled": "latest",
-    "@mui/icons-material": "latest",
-    "@mui/material": "latest",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2",
+    "embla-carousel-react": "^6.2.0",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-owl-carousel": "^2.3.3",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.50.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.14",
@@ -51,24 +32,5 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
-=======
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
->>>>>>> parent of 454905d (no message)
   }
 }
