--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       "@themes/*": ["themes/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/index.js"],
   "exclude": ["node_modules"]
 }
