--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "axios": "^0.26.1",
     "embla-carousel-react": "^6.2.0",
     "next": "latest",
     "react": "latest",
