--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
         "@material-ui/core": "^4.12.4",
+        "@mui/icons-material": "^5.6.2",
         "@mui/material": "^5.6.2",
         "axios": "^0.24.0",
         "classnames": "^2.3.1",
