--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-responsive-carousel": "^3.2.23",
+        "redux": "^4.2.0",
+        "redux-saga": "^1.1.3",
         "sourcebit": "^0.11.0",
         "sourcebit-source-filesystem": "^0.2.0",
         "sourcebit-target-next": "^0.7.1",
