--- a/content/data/config.json
+++ b/content/data/config.json
@@ -33,7 +33,7 @@
             {
                 "type": "Link",
                 "label": "关于",
-                "url": "/faq",
+                "url": "/",
                 "altText": ""
             },
             {
