--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^8.2.0",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
   },
